# pyLegendreDecomposition

./: .buildinfo  LICENSE  README.md  benchmarks.html  flamegraph_cpu.html  flamegraph_gpu.html  flamegraph_old.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: gh-pages.yml
LegendreDecomposition/: module.py  utils.py
_sources/: benchmarks.rst.txt  flamegraph_old.rst.txt  index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/legendre_decomp/: index.rst.txt
_sources/autoapi/legendre_decomp/module/: index.rst.txt
_sources/autoapi/legendredecomposition/: index.rst.txt
autoapi/: index.html
autoapi/legendre_decomp/: index.html
autoapi/legendre_decomp/module/: index.html
autoapi/legendre_decomp/naive/: index.html
autoapi/legendre_decomp/utils/: index.html
autoapi/legendredecomposition/: index.html
autoapi/legendredecomposition/module/: index.html
autoapi/legendredecomposition/naive/: index.html
autoapi/legendredecomposition/utils/: index.html
docs/source/: conf.py  flamegraph_gpu.rst
legendre_decomp/: __init__.py  dataset.py  module.py  module_mba.py  naive.py
legendredecomposition/: naive.py
manybodytensor/: module.py  old.py
notebooks/: Many_body_tensor2.ipynb  Many_body_tensor2_original.ipynb  bench.csv  bench.py  bench2.csv  benchmark.html  benchmark.ipynb  benchmark_2.ipynb  single_benchmark.ipynb
scripts/: benchmark_random.py
tests/: conftest.py  test_module.py  test_utils.py
tests/resources/: dl_movielens.sh
(+5 files in other folders)
