[tool.poetry]
name = "manybodytensor"
version = "0.1.0"
description = ""
authors = ["giprayogo <prayogo.genki.imam@advancesoft.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11.0 || >3.11.0,<4.0"
scipy = "^1.12.0"
numpy = "^1.26.3"
ipykernel = "^6.29.0"
matplotlib = "^3.8.2"
pandas = "^2.2.0"
japanize-matplotlib = "^1.1.3"
notebook = "^7.0.7"
snakeviz = "^2.2.0"
py-spy = "^0.3.14"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
pylance = "^0.9.11"
sphinx = "^7.2.6"
pytest = "^8.1.1"
sphinx-autoapi = "^3.0.0"
pydata-sphinx-theme = "^0.15.2"
scalene = "^1.5.37"

[tool.poetry.scripts]
benchmark_random = "scripts.benchmark_random:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E741"]
