[project]
name = "legendre_decomp"
version = "0.1.0"
description = ""
authors = [
	{name="Ryosuke Kojima",email="kojima.ryosuke.8e@kyoto-u.ac.jp"} ,
	{name="giprayogo",email="prayogo.genki.imam@advancesoft.jp"}
	]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",]
dependencies = [
    "numpy",
    "scipy",
	]
[tool.setuptools.packages.find]
exclude = ["notebook", "tests", "scripts"]
